
syntax = "proto3";
package VrmProtobuf;

import "google/protobuf/wrappers.proto";

// SpringBone makes objects such as costumes and hair swaying
message SpringBone {
  // Bone group swaying with SpringBone.
  // "required": [ "stiffness", "gravityPower", "dragForce", "hitRadius"]
  message BoneGroup {
    string name = 1;

    // The force to return to the initial pose
    float stiffness = 2;

    // Gravitational acceleration
    float gravityPower = 3;

    // The direction of gravity. A gravity other than downward direction also works.
    repeated float gravityDir = 4;

    // Air resistance. Deceleration force
    float dragForce = 5;

    // The index of the node to be the local coordinate
    google.protobuf.Int32Value center = 6;

    // The radius of the sphere used for the collision detection with colliders
    float hitRadius = 7;

    // The node index array to set SpringBone
    repeated int32 bones = 8;

    // Process collision detection. colliderGroup index
    repeated int32 colliderGroups = 9;
  }
  repeated BoneGroup boneGroups = 1;

  // Collider group for collisions with swaying objects.
  // "required": ["node"]
  message ColliderGroup {
    // The node of the collider group for setting up collision detection
    int32 node = 1;

    // "required": [ "radius" ]
    message Collider {
      // The local coordinate from the node of the collider group
      repeated float offset = 1;

      // The radius of the collider
      float radius = 2;
    }
    repeated Collider colliders = 2;
  }
  repeated ColliderGroup colliderGroups = 2;
}